# FBD_Lab

./: .gitignore  README.md  WEB_APP_PLAN.md  arrow_item.py  base_item.py  build_release.py  canvas.py  cog_item.py  commands.py  direction_item.py  ellipse_item.py  file_io.py  line_item.py  main.py  moment_item.py  point_item.py  polygon_item.py  pyproject.toml  rectangle_item.py  rotation_handle.py  spring_item.py  squiggle_item.py  text_item.py  todo.md  vector_item.py
fbd_lab/: __init__.py  __main__.py  canvas.py  commands.py  file_io.py  main.py  updater.py
fbd_lab/items/: __init__.py  base.py  cog.py  direction.py  ellipse.py  line.py  moment.py  pin_support.py  point.py  polygon.py  rectangle.py  roller_support.py  rotation_handle.py  spring.py  squiggle.py  text.py  vector.py
fbd_lab/ui/: mainwindow.ui
ui/: mainwindow.ui
