[project]
name = "fbd-lab"
version = "0.8.8"
description = "Free Body Diagram Laboratory - A PyQt6 canvas for drawing force vectors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
link-mode = "copy"

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.19.0",
]

[project.scripts]
fbd-lab = "fbd_lab.main:main"
